Profile pic updated.

--- a/HTML/css/style.less
+++ b/HTML/css/style.less
@@ -2977,7 +2977,7 @@ div[data-role="editor-toolbar"] {
 .tabcolor7-bg li a,
 .tabcolor8-bg li a,
 .tabcolor9-bg li a,
-.tabcolor10-bg li a,
+.tabcolor10-bg li a
 {color: #fff;}
 
 .tabcolor5-bg{	background: @color5;}
