--- a/HTML/css/root.css
+++ b/HTML/css/root.css
@@ -9,9 +9,9 @@
 Google Web Fonts
 ================================================ */
 /* Montserrat */
-@import url(http://fonts.googleapis.com/css?family=Montserrat:400,700);
+@import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
 /* Open Sans */
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,600,700,800,300);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,600,700,800,300);
 
 /* === Icons === */
 /* Font Awesome */
@@ -35,6 +35,13 @@ Main Css
 /* ================================================
 Plugin Css
 ================================================ */
+
+/* ng-image-crop */
+@import url('plugin/ng-image-crop/ng-img-crop.css');
+
+/* custom.css */
+@import url('custom.css');
+
 /* Awesome Bootstrap Checkbox */
 @import url('plugin/awesome-bootstrap-checkbox/awesome-bootstrap-checkbox.css');
 
@@ -71,5 +78,3 @@ Plugin Css
 
 /* Full Calendar */
 @import url('plugin/fullcalendar/fullcalendar.css');
-
-
