Usage statistics updated

--- a/HTML/partials/dashboard.html
+++ b/HTML/partials/dashboard.html
@@ -1,14 +1,15 @@
+<!--
 <div class="container-no-padding">
 
-    <!-- Start Social Profile -->
+    &lt;!&ndash; Start Social Profile &ndash;&gt;
     <div class="social-profile">
 
-        <!-- Start Top -->
+        &lt;!&ndash; Start Top &ndash;&gt;
         <div class="social-top">
 
             <div class="profile-left">
                 <img src="img/profileimg.png" alt="img" class="profile-img">
-                <h1 class="name">Jonathan Doe <!--<a href="#" class="btn btn-success"><i class="fa fa-plus"></i>Add Friend</a>--></h1>
+                <h1 class="name">Jonathan Doe &lt;!&ndash;<a href="#" class="btn btn-success"><i class="fa fa-plus"></i>Add Friend</a>&ndash;&gt;</h1>
                 <p class="profile-text">There can be no thought of finishing...</p>
             </div>
 
@@ -20,4 +21,77 @@
         </div>
     </div>
 
+</div>-->
+
+<div class="container-widget">
+
+    <!-- Start Top Stats -->
+    <div class="col-md-12">
+        <ul class="topstats clearfix">
+            <li class="arrow"></li>
+            <!--<li class="col-xs-6 col-lg-2">
+                <span class="title"><i class="fa fa-dot-circle-o"></i> Today Profit</span>
+                <h3>$36.45</h3>
+                <span class="diff"><b class="color-down"><i class="fa fa-caret-down"></i> 26%</b> from yesterday</span>
+            </li>
+            <li class="col-xs-6 col-lg-2">
+                <span class="title"><i class="fa fa-calendar-o"></i> This Week</span>
+                <h3>$96.25</h3>
+                <span class="diff"><b class="color-up"><i class="fa fa-caret-up"></i> 26%</b> from last week</span>
+            </li>-->
+            <li class="col-xs-6 col-lg-3">
+                <span class="title"><i class="fa fa-shopping-cart"></i> Total Meeting</span>
+                <h3 class="color-up">1696</h3>
+                <span class="diff"><b class="color-up"><i class="fa fa-caret-up"></i> 26%</b> from last month</span>
+            </li>
+            <li class="col-xs-6 col-lg-3">
+                <span class="title"><i class="fa fa-users"></i> Visitors</span>
+                <h3>960</h3>
+                <span class="diff"><b class="color-down"><i class="fa fa-caret-down"></i> 26%</b> from yesterday</span>
+            </li>
+            <li class="col-xs-6 col-lg-3">
+                <span class="title"><i class="fa fa-eye"></i> Page View</span>
+                <h3 class="color-up">46.230</h3>
+                <span class="diff"><b class="color-down"><i class="fa fa-caret-down"></i> 26%</b> from yesterday</span>
+            </li>
+            <li class="col-xs-6 col-lg-3">
+                <span class="title"><i class="fa fa-clock-o"></i> Average Time</span>
+                <h3 class="color-down">2:10<small>min</small></h3>
+                <span class="diff"><b class="color-up"><i class="fa fa-caret-up"></i> 26%</b> from last week</span>
+            </li>
+        </ul>
+    </div>
+    <!-- End Top Stats -->
+
+
+    <!-- Start First Row -->
+    <div class="row">
+
+        <!-- Start Chart Daily -->
+        <div class="col-md-12 col-lg-12">
+            <div class=" panel-widget widget chart-with-stats clearfix" style="height:450px;">
+
+                <div class="col-sm-12" style="height:450px;">
+                    <h4 class="title">TODAY USAGE<small>Last update: 1 Hours ago</small></h4>
+                    <div class="top-label"><h2>11.291</h2><h4>Today's View</h4></div>
+                    <div class="bigchart" id="todaysales"></div>
+                </div>
+                <div class="right" style="height:450px;">
+                    <h4 class="title">MEETINGS</h4>
+                    <!-- start stats -->
+                    <ul class="widget-inline-list clearfix">
+                        <li class="col-12"><span>962</span>Economics<i class="chart sparkline-green"></i></li>
+                        <li class="col-12"><span>367</span>Humanities<i class="chart sparkline-blue"></i></li>
+                        <li class="col-12"><span>92</span>Biology<i class="chart sparkline-red"></i></li>
+                    </ul>
+                    <!-- end stats -->
+                </div>
+
+
+            </div>
+        </div>
+
+        <!-- End Chart Daily -->
+    </div>
+    <br/><br/><br/><br/>
 </div>
