--- a/HTML/partials/video-conference-partial.html
+++ b/HTML/partials/video-conference-partial.html
@@ -59,6 +59,7 @@
                 <!--<source src="video/sample.mp4" type="video/mp4">-->
                 <!--Your browser does not support the video tag.-->
             </video>
+            <audio id="mainAudio" autoplay></audio>
         </div>
 
         <div class="col-md-2">
@@ -71,6 +72,18 @@
             </video>
 
             <video height="200" width="200" id="mainVideo4" autoplay>
+                <!--<source src="video/sample.mp4" type="video/mp4">-->
+            </video>
+
+            <video height="200" width="200" id="mainVideo5" autoplay>
+                <!--<source src="video/sample.mp4" type="video/mp4">-->
+            </video>
+
+            <video height="200" width="200" id="mainVideo6" autoplay>
+                <!--<source src="video/sample.mp4" type="video/mp4">-->
+            </video>
+
+            <video height="200" width="200" id="mainVideo7" autoplay>
                 <!--<source src="video/sample.mp4" type="video/mp4">-->
             </video>
         </div>
