--- a/HTML/partials/create-class-partial.html
+++ b/HTML/partials/create-class-partial.html
@@ -139,7 +139,7 @@
                         <div class="form-group">
                             <label class="col-sm-2 control-label form-label">Invite others</label>
                             <div class="col-sm-10">
-                                <textarea class="form-control" rows="3" id="textarea_invite_others" ng-model="meeting.inviteothers" placeholder="Mention email id separated by comma"></textarea>
+                                <textarea class="form-control" rows="3" id="textarea_invite_others" ng-model="meeting.invitees" placeholder="Mention email id separated by comma" required></textarea>
                             </div>
                         </div>
 
