--- a/HTML/partials/video-conference-students-partial.html
+++ b/HTML/partials/video-conference-students-partial.html
@@ -50,7 +50,7 @@
 <!-- START CONTAINER -->
 <div class="container-padding">
 
-
+    Students
     <br/><br/><br/>
     <!-- Start Row -->
     <div class="row">
@@ -73,8 +73,8 @@
                 <img id="mainFormShareVideoImage" src="img/shreensharedummy.jpg" style="width: 100%;">
             </div>
 
-            <div id="shareBtn" style="padding-top: 5px">
-                <button ng-click="share()" class="btn btn-option4"><i class="fa fa-share-alt"></i>Share Screen</button>
+            <div id="raiseMyHand" style="padding-top: 5px">
+                <button ng-click="raiseMyHand()" class="btn btn-option4"><i class="fa fa-question-circle"></i>Raise Hand</button>
             </div>
         </div>
 
@@ -83,35 +83,35 @@
                 <!--<source src="video/sample.mp4" type="video/mp4">-->
             </video>
             <div id="mainName1" style="display: none"></div>
-            <video id="mainVideo2" height="150px" autoplay style="display: none;border:2px solid #000000;">
-                <!--<source src="video/sample.mp4" type="video/mp4">-->
+            <!--<video id="mainVideo2" height="150px" autoplay style="display: none;border:2px solid #000000;">
+                &lt;!&ndash;<source src="video/sample.mp4" type="video/mp4">&ndash;&gt;
             </video>
             <div id="mainName2" style="display: none"></div>
 
             <video id="mainVideo3" height="150px" autoplay style="display: none;border:2px solid #000000;">
-                <!--<source src="video/sample.mp4" type="video/mp4">-->
+                &lt;!&ndash;<source src="video/sample.mp4" type="video/mp4">&ndash;&gt;
             </video>
             <div id="mainName3" style="display: none"></div>
 
             <video id="mainVideo4" autoplay height="150px" style="display: none;border:2px solid #000000;">
-                <!--<source src="video/sample.mp4" type="video/mp4">-->
+                &lt;!&ndash;<source src="video/sample.mp4" type="video/mp4">&ndash;&gt;
             </video>
             <div id="mainName4" style="display: none"></div>
 
             <video id="mainVideo5" autoplay height="150px" style="display: none;border:2px solid #000000;">
-                <!--<source src="video/sample.mp4" type="video/mp4">-->
+                &lt;!&ndash;<source src="video/sample.mp4" type="video/mp4">&ndash;&gt;
             </video>
             <div id="mainName5" style="display: none"></div>
 
             <video id="mainVideo6" autoplay height="150px" style="display: none;border:2px solid #000000;">
-                <!--<source src="video/sample.mp4" type="video/mp4">-->
+                &lt;!&ndash;<source src="video/sample.mp4" type="video/mp4">&ndash;&gt;
             </video>
             <div id="mainName6" style="display: none"></div>
 
             <video id="mainVideo7" autoplay height="150px" style="display: none;border:2px solid #000000;">
-                <!--<source src="video/sample.mp4" type="video/mp4">-->
+                &lt;!&ndash;<source src="video/sample.mp4" type="video/mp4">&ndash;&gt;
             </video>
-            <div id="mainName7" style="display: none"></div>
+            <div id="mainName7" style="display: none"></div>-->
         </div>
     </div>
     <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
