--- a/HTML/css/style.css
+++ b/HTML/css/style.css
@@ -975,16 +975,14 @@ VIDEO
 --------------------------------------------------------------------------------- */
 .video-container video{
   max-width: 100%;
-  max-height: 100%;
-  display: inline-block;
-  vertical-align: middle;
+  overflow: hidden;
+  /*height: 300px;*/
+  /*max-height: 100%;*/
 }
 
 .video-container-small video{
   max-width: 100%;
-  max-height: 100%;
-  display: inline-block;
-  vertical-align: middle;
+  /*max-height: 100%;*/
 }
 /* =================================================================================
 FOOTER 
