--- a/HTML/partials/quick-meeting-summary.html
+++ b/HTML/partials/quick-meeting-summary.html
@@ -2,20 +2,20 @@
 <div class="page-header">
     <h1 class="title">Others</h1>
     <ol class="breadcrumb">
-        <li><a href="index.html">Dashboard</a></li>
-        <li><a href="#">UI Elements</a></li>
-        <li class="active">Others</li>
+        <li><a href="javascript:void(0)">Manage Meetings</a></li>
+        <li><a href="javascript:void(0)">Quick Meeting</a></li>
+        <li class="active">Summary</li>
     </ol>
 
     <!-- Start Page Header Right Div -->
-    <div class="right">
+    <!--<div class="right">
         <div class="btn-group" role="group" aria-label="...">
             <a href="index.html" class="btn btn-light">Dashboard</a>
             <a href="#" class="btn btn-light"><i class="fa fa-refresh"></i></a>
             <a href="#" class="btn btn-light"><i class="fa fa-search"></i></a>
             <a href="#" class="btn btn-light" id="topstats"><i class="fa fa-line-chart"></i></a>
         </div>
-    </div>
+    </div>-->
     <!-- End Page Header Right Div -->
 
 </div>
@@ -26,11 +26,11 @@
 
     <div class="col-lg-8 col-md-6 titles">
         <span class="icon color7-bg"><i class="fa fa-leaf"></i></span>
-        <h1>More UI Elements ?</h1>
-        <h4>Do you need more UI Elements? Components are below.</h4>
+        <h1>Instant meeting scheduled!</h1>
+        <!--<h4>Do you need more UI Elements? Components are below.</h4>-->
     </div>
 
-    <div class="col-lg-4 col-md-6">
+    <!--<div class="col-lg-4 col-md-6">
         <ul class="list-unstyled list">
             <li><i class="fa fa-check"></i>Tooltips<li>
             <li><i class="fa fa-check"></i>Popovers<li>
@@ -38,7 +38,7 @@
             <li><i class="fa fa-check"></i>Accordion<li>
             <li><i class="fa fa-check"></i>and Much More...<li>
         </ul>
-    </div>
+    </div>-->
 
 </div>
 <!-- End Presentation -->
@@ -58,106 +58,24 @@
             <div class="panel">
 
                 <div class="panel-title">
-                    Tooltips
+                    Meeting Details
                 </div>
 
                 <div class="panel-body">
 
-                    <h5>Text Example</h5>
-                    <p>Tight pants next level keffiyeh <a href="#" data-toggle="tooltip" title="Default tooltip">you probably</a> haven't heard of them. Photo booth beard raw denim letterpress vegan messenger bag stumptown. Farm-to-table seitan, mcsweeney's fixie sustainable quinoa 8-bit american apparel <a href="#" data-toggle="tooltip" title="Another tooltip">have a</a> terry richardson vinyl chambray. Beard stumptown, cardigans banh mi lomo thundercats. Tofu biodiesel williamsburg marfa, four loko mcsweeney's cleanse vegan chambray. A really ironic artisan <a href="#" data-toggle="tooltip" title="Another one here too">whatever keytar</a>, scenester farm-to-table banksy Austin <a href="#" data-toggle="tooltip" title="The last tip!">twitter handle</a> freegan cred raw denim single-origin coffee viral.</p>
+                    <p>Congrats! We have successfully scheduled your instant meeting.</p>
 
-                    <h5>Button Example</h5>
-                    <div class="col-sm-3">
-                        <button type="button" class="btn btn-default" data-toggle="tooltip" data-placement="left" title="Tooltip on left">Left</button>
-                    </div>
-
-                    <div class="col-sm-3">
-                        <button type="button" class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Tooltip on top">Top</button>
-                    </div>
-
-                    <div class="col-sm-3">
-                        <button type="button" class="btn btn-default" data-toggle="tooltip" data-placement="bottom" title="Tooltip on bottom">Bottom</button>
-                    </div>
-
-                    <div class="col-sm-3">
-                        <button type="button" class="btn btn-default" data-toggle="tooltip" data-placement="right" title="Tooltip on right">Right</button>
-                    </div>
-
-                </div>
-
-            </div>
-        </div>
-        <!-- End Panel -->
-
-
-
-        <!-- Start Panel -->
-        <div class="col-md-12">
-            <div class="panel">
-
-                <div class="panel-title">
-                    Popovers
-                </div>
-
-                <div class="panel-body">
-
-                    <p>Four options are available: top, right, bottom, and left aligned.</p>
-
-                    <div class="col-sm-3">
-                        <button type="button" class="btn btn-default" data-container="body" data-toggle="popover" data-placement="left" data-content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus.">
-                            Left
-                        </button>
-                    </div>
-
-                    <div class="col-sm-3">
-                        <button type="button" class="btn btn-default" data-container="body" data-toggle="popover" data-placement="top" data-content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus.">
-                            Top
-                        </button>
-                    </div>
-
-                    <div class="col-sm-3">
-                        <button type="button" class="btn btn-default" data-container="body" data-toggle="popover" data-placement="bottom" data-content="Vivamus
-            sagittis lacus vel augue laoreet rutrum faucibus.">
-                            Bottom
-                        </button>
-                    </div>
-
-                    <div class="col-sm-3">
-                        <button type="button" class="btn btn-default" data-container="body" data-toggle="popover" data-placement="right" data-content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus.">
-                            Right
-                        </button>
-                    </div>
-
-                </div>
-
-            </div>
-        </div>
-        <!-- End Panel -->
-
-
-        <!-- Start Panel -->
-        <div class="col-md-12">
-            <div class="panel">
-
-                <div class="panel-title">
-                    Collapse
-                </div>
-
-                <div class="panel-body">
-
-                    <p>Flexible plugin that utilizes a handful of classes for easy toggle behavior.</p>
-
-                    <a class="btn btn-default" data-toggle="collapse" href="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-                        Link with href
+                    <a class="btn btn-success" href="{{conferenceUrlInstantMeeting}}/{{instantMeetingToken}}">
+                        <i class="fa fa-calendar"></i> Go to Meeting
                     </a>
-                    <button class="btn btn-success" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-                        Button with data-target
-                    </button>
-                    <div class="collapse margin-t-10" id="collapseExample">
+                    <a class="btn btn-default"  href="#/admin/class/quick">
+                        <i class="fa fa-clock-o"></i> Create Quick Meeting
+                    </a>
+                    <!--<div class="collapse margin-t-10" id="collapseExample">
                         <div class="well">
                             Science cuts two ways, of course; its products can be used for both good and evil. But there's no turning back from science. The early warnings about technological dangers also come from science.
                         </div>
-                    </div>
+                    </div>-->
 
                 </div>
 
@@ -167,7 +85,7 @@
 
 
         <!-- Start Panel -->
-        <div class="col-md-12">
+        <!--<div class="col-md-12">
             <div class="panel">
 
                 <div class="panel-title">
@@ -227,13 +145,13 @@
                 </div>
 
             </div>
-        </div>
+        </div>-->
         <!-- End Panel -->
 
 
 
         <!-- Start Panel -->
-        <div class="col-md-12">
+        <!--<div class="col-md-12">
             <div class="panel">
 
                 <div class="panel-title">
@@ -348,12 +266,12 @@
                 </div>
 
             </div>
-        </div>
+        </div>-->
         <!-- End Panel -->
 
 
         <!-- Start Panel -->
-        <div class="col-md-12">
+        <!--<div class="col-md-12">
             <div class="panel">
 
                 <div class="panel-title">
@@ -381,7 +299,7 @@
                 </div>
 
             </div>
-        </div>
+        </div>-->
         <!-- End Panel -->
 
     </div>
