Cleanup of the constants by creating a new module and injecting all the module with it. Also all the client specific things are hardcoded

--- a/HTML/partials/login-partial.html
+++ b/HTML/partials/login-partial.html
@@ -1,8 +1,8 @@
 <div class="login-form">
     <form name="login_form">
         <div class="top">
-            <img src="img/christ_univ_logo.png" alt="icon" class="icon">
-            <h1>Christ University</h1>
+            <img src="{{themeText.LOGIN_HEADER_IMAGE_316x316}}" alt="icon" class="icon">
+            <h1>{{themeText.CLIENT_NAME}}</h1>
             <h4>Providing seamless video conference</h4>
         </div>
 
