--- a/HTML/partials/register-partial.html
+++ b/HTML/partials/register-partial.html
@@ -2,9 +2,9 @@
     <form name="register_form">
 
         <div class="top">
-            <img src="img/christ_univ_logo.png" alt="icon" class="icon">
+            <img src="{{themeText.LOGIN_HEADER_IMAGE_316x316}}" alt="icon" class="icon">
             <h1>Register</h1>
-            <h4>Welcome to Christ University community !</h4>
+            <h4>Welcome to the {{themeText.CLIENT_NAME}} community !</h4>
         </div>
 
 
