1. Added Self View functionality. 2. Presenter URL not working bug solved. 3. Connsocio Name. 4. 2 or more client can log in to different meetings.

--- a/HTML/partials/video-conference-teacher-partial.html
+++ b/HTML/partials/video-conference-teacher-partial.html
@@ -79,6 +79,10 @@
         </div>
 
         <div class="col-md-2">
+            <video id="mainFormSelfVideo" height="150px" autoplay style="border:2px solid #000000;">
+            </video>
+            <div id="mainNameSelf">YOU</div>
+
             <video id="mainVideo1" height="150px" autoplay style="display: none;border:2px solid #000000;">
                 <!--<source src="video/sample.mp4" type="video/mp4">-->
             </video>
