Show the participants name in the self view.

--- a/HTML/partials/video-conference-partial.html
+++ b/HTML/partials/video-conference-partial.html
@@ -79,42 +79,37 @@
         </div>
 
         <div class="col-md-2">
+            <!--Self Video-->
             <video id="mainFormSelfVideo" height="150px" autoplay style="border:2px solid #000000;">
             </video>
-
             <div id="mainNameSelf">YOU</div>
+            <!--Self Video ends here-->
 
+            <!--Video lists for Active Participants-->
             <video id="mainVideo1" height="150px" autoplay style="display: none;border:2px solid #000000;">
-                <!--<source src="video/sample.mp4" type="video/mp4">-->
             </video>
             <div id="mainName1" style="display: none"></div>
             <video id="mainVideo2" height="150px" autoplay style="display: none;border:2px solid #000000;">
-                <!--<source src="video/sample.mp4" type="video/mp4">-->
             </video>
             <div id="mainName2" style="display: none"></div>
 
             <video id="mainVideo3" height="150px" autoplay style="display: none;border:2px solid #000000;">
-                <!--<source src="video/sample.mp4" type="video/mp4">-->
             </video>
             <div id="mainName3" style="display: none"></div>
 
             <video id="mainVideo4" autoplay height="150px" style="display: none;border:2px solid #000000;">
-                <!--<source src="video/sample.mp4" type="video/mp4">-->
             </video>
             <div id="mainName4" style="display: none"></div>
 
             <video id="mainVideo5" autoplay height="150px" style="display: none;border:2px solid #000000;">
-                <!--<source src="video/sample.mp4" type="video/mp4">-->
             </video>
             <div id="mainName5" style="display: none"></div>
 
             <video id="mainVideo6" autoplay height="150px" style="display: none;border:2px solid #000000;">
-                <!--<source src="video/sample.mp4" type="video/mp4">-->
             </video>
             <div id="mainName6" style="display: none"></div>
 
             <video id="mainVideo7" autoplay height="150px" style="display: none;border:2px solid #000000;">
-                <!--<source src="video/sample.mp4" type="video/mp4">-->
             </video>
             <div id="mainName7" style="display: none"></div>
         </div>
