Raise hand functionality done, with a small bug on the chat window of the attendees. They are not updating.

--- a/HTML/partials/guest-join-conference-partial.html
+++ b/HTML/partials/guest-join-conference-partial.html
@@ -31,7 +31,7 @@
         <!--<h4>Responsive and user-friendly form elements</h4>-->
     </div>
 
-    <div class="col-lg-3 col-md-4">
+    <!--<div class="col-lg-3 col-md-4">
         <ul class="list-unstyled list">
             <li><i class="fa fa-pencil-square-o"></i>Topic : Fundamentals of Computing
             <li>
@@ -40,7 +40,7 @@
             <li><i class="fa fa-pencil-square-o"></i>Instructor : Mr Alex
             <li>
         </ul>
-    </div>
+    </div>-->
 
 </div>
 <!-- End Presentation -->
