Raise Hand fucntionality done. 2 bugs left out.
User automatically logs in the conference page if he has signed in.

--- a/HTML/partials/video-conference-students-partial.html
+++ b/HTML/partials/video-conference-students-partial.html
@@ -41,9 +41,9 @@
         <div class="col-md-2">
 
             <!--Display his self view-->
-            <video id="mainFormSelfVideo" height="150px" autoplay style="border:2px solid #000000;">
+            <!--<video id="mainFormSelfVideo" height="150px" autoplay style="border:2px solid #000000;">
             </video>
-            <div id="mainNameSelf">YOU</div>
+            <div id="mainNameSelf">YOU</div>-->
 
 
             <!--Display the teachers's video, which is the first video-->
