--- a/HTML/partials/video-conference-teacher-partial.html
+++ b/HTML/partials/video-conference-teacher-partial.html
@@ -36,8 +36,8 @@
         <div class="col-md-2">
 
             <!--Video for displaying self view-->
-            <video id="mainFormSelfVideo" height="150px" autoplay style="border:2px solid #000000;"></video>
-            <div id="mainNameSelf">YOU</div>
+            <!--<video id="mainFormSelfVideo" height="150px" autoplay style="border:2px solid #000000;"></video>
+            <div id="mainNameSelf">YOU</div>-->
 
             <!--Videos for users in Active Talker Mode-->
             <div ng-repeat="i in numberToArray(attendees.count) track by $index">
