1. guest user should be logined automatically if he is loggedin 3. whiteboard functionality. 5. raise hand feature in teachers and student.

--- a/HTML/partials/video-conference-teacher-partial.html
+++ b/HTML/partials/video-conference-teacher-partial.html
@@ -20,8 +20,8 @@
             <!--Share Screen Canvas-->
             <div id="mainFormShareVideo" style="border:5px solid #000000;">
                 <video id="mainFormShareVideo1" autoplay style="display: none"></video>
-                <!--<canvas id="mainFormCanvas"></canvas>
-                <canvas id="mainFormCanvas2"></canvas>-->
+                <canvas id="mainFormCanvas" style="display:none; z-index: 1; position: absolute; top: 0px; left: 0px;"></canvas>
+                <canvas id="mainFormCanvas2" style="display: none; z-index: 20; position: absolute; top: 0px; left: 0px;"></canvas>
                 <!--<input id="mainFormCanvasTextInput" type="text"/>
                 <div id="mainFormShareName" class="video-label">Share</div>-->
                 <img id="mainFormShareVideoImage" src="img/shreensharedummy.jpg" style="width: 100%;">
@@ -36,8 +36,8 @@
         <div class="col-md-2">
 
             <!--Video for displaying self view-->
-            <!--<video id="mainFormSelfVideo" height="150px" autoplay style="border:2px solid #000000;"></video>
-            <div id="mainNameSelf">YOU</div>-->
+            <video id="mainFormSelfVideo" height="150px" muted autoplay style="border:2px solid #000000;"></video>
+            <div id="mainNameSelf">YOU</div>
 
             <!--Videos for users in Active Talker Mode-->
             <div ng-repeat="i in numberToArray(attendees.count) track by $index">
