--- a/HTML/partials/video-conference-partial.html
+++ b/HTML/partials/video-conference-partial.html
@@ -14,10 +14,12 @@
 
             <div id="mainFormShareVideo" style="border:5px solid #000000;">
                 <video id="mainFormShareVideo1" autoplay style="display: none"></video>
-                <!--<canvas id="mainFormCanvas"></canvas>
-                <canvas id="mainFormCanvas2"></canvas>-->
+
+                <canvas id="mainFormCanvas" style="display:none; z-index: 1; position: absolute; top: 0px; left: 0px;"></canvas>
+                <canvas id="mainFormCanvas2" style="display: none; z-index: 20; position: absolute; top: 0px; left: 0px;"></canvas>
                 <!--<input id="mainFormCanvasTextInput" type="text"/>
                 <div id="mainFormShareName" class="video-label">Share</div>-->
+
                 <img id="mainFormShareVideoImage" src="img/shreensharedummy.jpg" style="width: 100%;">
             </div>
 
@@ -28,7 +30,7 @@
 
         <div class="col-md-2">
             <!--Self Video-->
-            <video id="mainFormSelfVideo" height="150px" autoplay style="border:2px solid #000000;">
+            <video id="mainFormSelfVideo" height="150px" muted autoplay style="border:2px solid #000000;">
             </video>
             <div id="mainNameSelf">YOU</div>
             <!--Self Video ends here-->
