--- a/HTML/partials/video-conference-students-partial.html
+++ b/HTML/partials/video-conference-students-partial.html
@@ -14,8 +14,8 @@
 
             <div id="mainFormShareVideo" style="border:5px solid #000000;">
                 <video id="mainFormShareVideo1" autoplay style="display: none"></video>
-                <!--<canvas id="mainFormCanvas"></canvas>
-                <canvas id="mainFormCanvas2"></canvas>-->
+                <canvas id="mainFormCanvas" style="border:2px solid #000000;display:none; z-index: 1; position: absolute; top: 0px; left: 0px;"></canvas>
+                <canvas id="mainFormCanvas2" style="border:5px solid #000000;display: none; z-index: 20; position: absolute; top: 0px; left: 0px;"></canvas>
                 <!--<input id="mainFormCanvasTextInput" type="text"/>
                 <div id="mainFormShareName" class="video-label">Share</div>-->
                 <img id="mainFormShareVideoImage" src="img/shreensharedummy.jpg" style="width: 100%;">
@@ -41,10 +41,8 @@
         <div class="col-md-2">
 
             <!--Display his self view-->
-            <!--<video id="mainFormSelfVideo" height="150px" autoplay style="border:2px solid #000000;">
-            </video>
-            <div id="mainNameSelf">YOU</div>-->
-
+            <video id="mainFormSelfVideo" height="150px" autoplay style="border:2px solid #000000;" muted></video>
+            <div id="mainNameSelf">YOU</div>
 
             <!--Display the teachers's video, which is the first video-->
             <video id="mainVideo1" height="150px" autoplay style="display: none;border:2px solid #000000;"></video>
