Clean up of the code.

--- a/HTML/partials/video-conference-students-partial.html
+++ b/HTML/partials/video-conference-students-partial.html
@@ -14,8 +14,8 @@
 
             <div id="mainFormShareVideo" style="border:5px solid #000000;">
                 <video id="mainFormShareVideo1" autoplay style="display: none"></video>
-                <canvas id="mainFormCanvas" style="border:2px solid #000000;display:none; z-index: 1; position: absolute; top: 0px; left: 0px;"></canvas>
-                <canvas id="mainFormCanvas2" style="border:5px solid #000000;display: none; z-index: 20; position: absolute; top: 0px; left: 0px;"></canvas>
+                <canvas id="mainFormCanvas" style="display:none; z-index: 1; position: absolute; top: 0px; left: 0px;"></canvas>
+                <canvas id="mainFormCanvas2" style="display: none; z-index: 20; position: absolute; top: 0px; left: 0px;"></canvas>
                 <!--<input id="mainFormCanvasTextInput" type="text"/>
                 <div id="mainFormShareName" class="video-label">Share</div>-->
                 <img id="mainFormShareVideoImage" src="img/shreensharedummy.jpg" style="width: 100%;">
