--- a/HTML/css/custom.css
+++ b/HTML/css/custom.css
@@ -4,3 +4,20 @@
     width:200px;
     height:200px;
 }
+
+
+/*
+html {
+    height: 100%;
+    width: 100%;
+    font-family: Helvetica, Arial, sans-serif;
+
+}
+
+body {
+    margin: 0px;
+    height: 100%;
+    width: 100%;
+    background-color: #F0F0F0;
+    color: #777;font-size: 14px;
+}*/
